<resources>
    <string name="app_name">MathGame</string>
    <string name="very_hard_leaderboard">Very Hard Leaderboard</string>
    <string name="go_back">Go back</string>
    <string name="hard_leaderboard">Hard Leaderboard</string>
    <string name="medium_leaderboard">Medium Leaderboard</string>
    <string name="easy_leaderboard">Easy Leaderboard</string>
    <string name="questions">Questions</string>
    <string name="name">Name</string>
    <string name="leaderboard">Leaderboard </string>
    <string name="username">Username</string>
    <string name="time">Time</string>
    <string name="choose_your_level">Choose your level!</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very Hard</string>
    <string name="submit">Submit</string>
    <string name="number">number</string>
    <string name="math_question">Math Question</string>
    <string name="score">Score: </string>
    <string name="question">Question: </string>
    <string name="maths_time">Maths Time</string>
    <string name="begin_quiz">Begin Quiz</string>
    <string name="Please_enter_in_a_guess">Please enter in a guess</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="you_scored">You scored </string>
    <string name="out_of"> out of </string>
    <string name="in"> in </string>
    <string name="seconds"> seconds.</string>
    <string name="please_enter"> Please enter in a username for the leaderboard</string>
    <string name="try_again"> Please try again to get on the leaderboard.</string>
    <string name="average_score">Average Score:</string>
    <string name="score_leaderboard">Score</string>
</resources>