<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_leaderboard_title"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/pacifico"
                android:text="@string/leaderboard"
                android:textColor="@color/black"
                android:textSize="40dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_gravity="left"
                app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_title"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_leaderboard"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_title"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="right"
                app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_title"/>

            </LinearLayout>

            <TextView
                android:id="@+id/easyLeaderboard"
                android:text="@string/easy_leaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_title" />

            <TextView
                android:id="@+id/easySummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_score"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_title" />

            <ListView
                android:id="@+id/tv_leaderboard_1"
                android:layout_width="wrap_content"
                android:layout_height="203dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/green"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/easyLeaderboard" />


            <TextView
                android:id="@+id/mediumLeaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium_leaderboard"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_1" />

            <TextView
                android:id="@+id/mediumSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_score"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_1" />

            <ListView
                android:id="@+id/tv_leaderboard_2"
                android:layout_width="wrap_content"
                android:layout_height="203dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/yellow"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mediumLeaderboard" />

            <TextView
                android:id="@+id/hardLeaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard_leaderboard"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_2" />

            <TextView
                android:id="@+id/hardSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_score"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_2" />

            <ListView
                android:background="@color/orange"
                android:id="@+id/tv_leaderboard_3"
                android:layout_width="wrap_content"
                android:layout_height="203dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hardLeaderboard" />

            <TextView
                android:id="@+id/veryHardLeaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/very_hard_leaderboard"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_3" />

            <TextView
                android:id="@+id/veryHardSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_score"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_3" />

            <ListView
                android:background="@color/red"
                android:id="@+id/tv_leaderboard_4"
                android:layout_width="wrap_content"
                android:layout_height="203dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/veryHardLeaderboard" />

            <Button
                android:id="@+id/btnGoBack"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/blue"
                android:text="@string/go_back" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>